Bug 959190 - [URL API] stringify href attribute, r=bz