dom/base/URL.h
@@ -118,6 +118,11 @@ public:
 
   void SetHash(const nsAString& aArg);
 
+  void Stringify(nsString& aRetval) const
+  {
+    GetHref(aRetval);
+  }
+
   // URLSearchParamsObserver
   void URLSearchParamsUpdated() MOZ_OVERRIDE;
   void URLSearchParamsNeedsUpdates() MOZ_OVERRIDE;
