dom/webidl/HTMLAreaElement.webidl
@@ -14,7 +14,6 @@
 
 // http://www.whatwg.org/specs/web-apps/current-work/#the-area-element
 interface HTMLAreaElement : HTMLElement {
-stringifier;
            [SetterThrows]
            attribute DOMString alt;
            [SetterThrows]
